feat: don't use 'magic numbers', member MAX_BORROW_LIMIT added